fixed bugg where the flex items cover the quote section when wrapping

--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -30,13 +30,12 @@
   .projects {
     background: white;
 
-    height: 42vh;
     min-height: 42vh;
     @include flex(row, center, space-between);
     flex-wrap: wrap;
 
     .project {
-      height: 100%;
+      height: 42vh;
       min-height: 30rem;
 
       flex: 1 1 22rem;
